--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-Hello World
+<!DOCTYPE HTML>
+<html lang="en">
+<title>Brian Bi</title>
+
+<h1>
+
+      <div id="summary"> I'm a computer science student at UC Berkeley </div>
