update on contact info

--- a/index.html
+++ b/index.html
@@ -1,7 +1,66 @@
 <!DOCTYPE HTML>
 <html lang="en">
+<meta name=viewport content="width=device-width, initial-scale=1">
+<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
+<link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
+
+<meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
 <title>Brian Bi</title>
 
-<h1>
+<style>
+   body {
+ 	    font-family: "Garamond", Garamond, sans-serif;
+      margin-left: 2em;
+      margin-right: 2em;
+ 		  max-width: 800px;
+ 		  color: #222;
+   }
+</style>
 
-      <div id="summary"> I'm a computer science student at UC Berkeley </div>
+<h1>
+   Brian Bi
+   <span id="buttons">
+		<a class="iconlink" href="mailto:brianbi@berkeley.edu"><svg class="icon" xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 15 15"><title>E-Mail</title><path fill-rule="evenodd" d="M0 4v8c0 .55.45 1 1 1h12c.55 0 1-.45 1-1V4c0-.55-.45-1-1-1H1c-.55 0-1 .45-1 1zm13 0L7 9 1 4h12zM1 5.5l4 3-4 3v-6zM2 12l3.5-3L7 10.5 8.5 9l3.5 3H2zm11-.5l-4-3 4-3v6z"/></svg></a>
+		<a class="iconlink" href="https://github.com/brianhbi"><svg class="icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16"><title>Github</title><path fill-rule="evenodd" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0 0 16 8c0-4.42-3.58-8-8-8z"/></svg></a>
+		<a class="iconlink" href="https://www.linkedin.com/in/brianhbi/"><?xml version="1.0" encoding="UTF-8"?><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="15pt" height="15pt" viewBox="0 0 15 15" version="1.1">
+		<defs>
+		<filter id="alpha" filterUnits="objectBoundingBox" x="0%" y="0%" width="100%" height="100%">
+		  <feColorMatrix type="matrix" in="SourceGraphic" values="0 0 0 0 1 0 0 0 0 1 0 0 0 0 1 0 0 0 1 0"/>
+		</filter>
+		<mask id="mask0">
+		  <g filter="url(#alpha)">
+		<rect x="0" y="0" width="15" height="15" style="fill:rgb(0%,0%,0%);fill-opacity:0.780392;stroke:none;"/>
+		  </g>
+		</mask>
+		<linearGradient id="linear0" gradientUnits="userSpaceOnUse" x1="-344.15" y1="274.71" x2="-395.85" y2="425.4" gradientTransform="matrix(-0.0377514,0,0,0.0377514,-11.113446,-11.910148)">
+		<stop offset="0" style="stop-color:rgb(100%,100%,100%);stop-opacity:1;"/>
+		<stop offset="1" style="stop-color:rgb(100%,100%,100%);stop-opacity:0;"/>
+		</linearGradient>
+		<clipPath id="clip1">
+		  <rect width="15" height="15"/>
+		</clipPath>
+		<g id="surface6" clip-path="url(#clip1)">
+		<path style=" stroke:none;fill-rule:nonzero;fill:url(#linear0);" d="M 11.035156 0.640625 L 3.964844 0.640625 C 2.089844 0.640625 0.582031 2.160156 0.582031 4.050781 L 0.582031 10.949219 C 0.644531 12.425781 0.875 11.492188 1.320312 9.859375 C 1.835938 7.964844 3.515625 6.308594 5.5625 5.066406 C 7.121094 4.117188 8.871094 3.511719 12.050781 3.453125 C 13.855469 3.421875 13.695312 1.113281 11.035156 0.640625 Z M 11.035156 0.640625 "/>
+		</g>
+		</defs>
+		<g id="surface1">
+		<path style=" stroke:none;fill-rule:nonzero;fill:rgb(0%,40%,60%);fill-opacity:1;" d="M 12.734375 0 L 2.265625 0 C 1.015625 0 0 1.015625 0 2.265625 L 0 12.734375 C 0 13.984375 1.015625 15 2.265625 15 L 12.734375 15 C 13.984375 15 15 13.984375 15 12.734375 L 15 2.265625 C 15 1.015625 13.984375 0 12.734375 0 Z M 12.734375 0 "/>
+		<use xlink:href="#surface6" mask="url(#mask0)"/>
+		<path style=" stroke:none;fill-rule:nonzero;fill:rgb(100%,100%,100%);fill-opacity:1;" d="M 4.800781 12.589844 L 4.800781 5.773438 L 2.535156 5.773438 L 2.535156 12.589844 Z M 3.667969 4.839844 C 4.457031 4.839844 4.949219 4.316406 4.949219 3.664062 C 4.933594 2.996094 4.457031 2.484375 3.683594 2.484375 C 2.90625 2.484375 2.398438 2.996094 2.398438 3.664062 C 2.398438 4.316406 2.890625 4.839844 3.652344 4.839844 Z M 3.667969 4.839844 "/>
+		<path style=" stroke:none;fill-rule:nonzero;fill:rgb(100%,100%,100%);fill-opacity:1;" d="M 6.054688 12.589844 L 8.320312 12.589844 L 8.320312 8.78125 C 8.320312 8.578125 8.332031 8.375 8.394531 8.230469 C 8.558594 7.824219 8.929688 7.402344 9.554688 7.402344 C 10.375 7.402344 10.703125 8.027344 10.703125 8.941406 L 10.703125 12.589844 L 12.96875 12.589844 L 12.96875 8.679688 C 12.96875 6.585938 11.851562 5.613281 10.359375 5.613281 C 9.140625 5.613281 8.601562 6.296875 8.304688 6.761719 L 8.320312 6.761719 L 8.320312 5.773438 L 6.054688 5.773438 C 6.082031 6.410156 6.054688 12.589844 6.054688 12.589844 Z M 6.054688 12.589844 "/>
+		</g>
+	</svg></a>
+
+	<defs>
+
+	</span>
+</h1>
+
+<div id="words">
+	<div id="summary">
+		I am 2nd year student at UC Berkeley. <br><br>Projects:
+	</div>
+	<ul id="thinglist">
+		
+	</ul>
+</div>
