--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
 
 <div id="words">
 	<div id="summary">
-		I am 2nd year student at UC Berkeley. <br><br>Projects:
+		I am a 2nd year student at UC Berkeley. <br><br>Projects:
 	</div>
 	<ul id="thinglist">
-		
+
 	</ul>
 </div>
