--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
  		  max-width: 800px;
  		  color: #222;
    }
+
+   #summary {
+        font-size: 2em;
+        font-weight: 200;
+        margin-top: 0.1em;
+   }
 </style>
 
 <h1>
@@ -22,7 +28,7 @@
    <span id="buttons">
 		<a class="iconlink" href="mailto:brianbi@berkeley.edu"><svg class="icon" xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 15 15"><title>E-Mail</title><path fill-rule="evenodd" d="M0 4v8c0 .55.45 1 1 1h12c.55 0 1-.45 1-1V4c0-.55-.45-1-1-1H1c-.55 0-1 .45-1 1zm13 0L7 9 1 4h12zM1 5.5l4 3-4 3v-6zM2 12l3.5-3L7 10.5 8.5 9l3.5 3H2zm11-.5l-4-3 4-3v6z"/></svg></a>
 		<a class="iconlink" href="https://github.com/brianhbi"><svg class="icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16"><title>Github</title><path fill-rule="evenodd" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0 0 16 8c0-4.42-3.58-8-8-8z"/></svg></a>
-		<a class="iconlink" href="https://www.linkedin.com/in/brianhbi/"><?xml version="1.0" encoding="UTF-8"?><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="15pt" height="15pt" viewBox="0 0 15 15" version="1.1">
+		<a class="iconlink" href="https://www.linkedin.com/in/brianhbi/"><?xml version="1.0" encoding="UTF-8"?><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="15pt" height="15pt" viewBox="0 0 15 15" version="1.1"><title>LinkedIn</title>
 		<defs>
 		<filter id="alpha" filterUnits="objectBoundingBox" x="0%" y="0%" width="100%" height="100%">
 		  <feColorMatrix type="matrix" in="SourceGraphic" values="0 0 0 0 1 0 0 0 0 1 0 0 0 0 1 0 0 0 1 0"/>
@@ -58,9 +64,11 @@
 
 <div id="words">
 	<div id="summary">
-		I am a 2nd year student at UC Berkeley. <br><br>Projects:
+		I am a 2nd year student at UC Berkeley. <br><br>Here are a few projects I have done:
 	</div>
 	<ul id="thinglist">
+          <li><a href="http://grigomaps.herokuapp.com/map.html">Bear Maps</a> - Global positional system for the city of Berkeley. Finding the shortest route between two locations.
+          <li><a href="http://brianhbi.me/tempo-recognizer/">Tempo-Recognizer</a> - Tool to recognize the tempo of a playlist utilizing Spotify API.
 
 	</ul>
 </div>
