--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
 <div id="words">
 	<div id="summary">
-		I am a 2nd year student at UC Berkeley. <br><br>Here are a few projects I have done:
+		I am a 2nd year student at UC Berkeley. <br><br>Here are a few projects I have done (more on Git):
 	</div>
 	<ul id="thinglist">
           <li><a href="http://grigomaps.herokuapp.com/map.html">Bear Maps</a> - Global positional system for the city of Berkeley. Finding the shortest route between two locations.
