update on website

--- a/index.html
+++ b/index.html
@@ -64,11 +64,9 @@
 
 <div id="words">
 	<div id="summary">
-		I am a 2nd year student at UC Berkeley. <br><br>Here are a few projects I have done (more on Git):
+		I am a 2nd year student at UC Berkeley. <br><br>Projects
 	</div>
 	<ul id="thinglist">
-          <li><a href="http://grigomaps.herokuapp.com/map.html">Bear Maps</a> - Global positional system for the city of Berkeley. Finding the shortest route between two locations.
-          <li><a href="http://brianhbi.me/tempo-recognizer/">Tempo-Recognizer</a> - Tool to recognize the tempo of a playlist utilizing Spotify API.
 
 	</ul>
 </div>
